lib_LTLIBRARIES = libqicclient.la
libqicclient_la_SOURCES = \
			  catalog.cxx \
			  ord.cxx \
			  member.cxx \
			  admin.cxx \
			  client.cxx
libqicclient_la_CPPFLAGS = $(QT_CFLAGS)
libqicclient_la_LDFLAGS = $(QT_LIBS)
pkginclude_HEADERS = \
		     qicclient/catalog.hxx \
		     qicclient/ord.hxx \
		     qicclient/member.hxx \
		     qicclient/admin.hxx \
		     qicclient/client.hxx
