lib_LTLIBRARIES = libqicclient.la
libqicclient_la_SOURCES = \
			  client.cxx \
			  catalog.cxx \
			  ord.cxx \
			  member.cxx \
			  admin.cxx \
			  qicclient.hxx \
			  qicclient/catalog.hxx \
			  qicclient/ord.hxx \
			  qicclient/member.hxx \
			  qicclient/admin.hxx
libqicclient_la_CPPFLAGS = $(QT_CFLAGS)
libqicclient_la_LDFLAGS = $(QT_LIBS)
include_HEADERS = qicclient.hxx
pkginclude_HEADERS = \
		     qicclient/catalog.hxx \
		     qicclient/ord.hxx \
		     qicclient/member.hxx \
		     qicclient/admin.hxx
