lib_LTLIBRARIES = libqinterchange.la
libqinterchange_la_SOURCES = \
			  interchange.cxx \
			  catalog.cxx \
			  ord.cxx \
			  member.cxx \
			  admin.cxx \
			  interchange.hxx \
			  interchange/catalog.hxx \
			  interchange/ord.hxx \
			  interchange/member.hxx \
			  interchange/admin.hxx
libqinterchange_la_CPPFLAGS = $(DEPS_CFLAGS)
include_HEADERS = interchange.hxx
pkginclude_HEADERS = \
		     interchange/catalog.hxx \
		     interchange/ord.hxx \
		     interchange/member.hxx \
		     interchange/admin.hxx
